refactor: mypage 썸네일 추출 로직 변경